2005-08-19  Kaushal Kumar  <kakumar@novell.com>

	* htmlengine.c (element_parse_object): Redirect commandline spew as debug log.

	Patch by: Julien Gilli.
	Fixes bug #313586.

2005-08-17  Mengjie Yu  <meng-jie.yu@sun.com>

	* htmltext.c: (html_text_prepare_attrs),
	(html_text_get_pango_info):
	* htmltext.h:
	Change function name prepare_attrs to html_text_prepare_attrs and make it
	a new public API. We will call it in a11y part.

	Fixes #312189

2005-08-16  Kaushal Kumar  <kakumar@novell.com>

	* gtkhtml-stream.c (gtk_html_stream_vprintf): Some clean-ups. 

2005-08-12  Kaushal Kumar  <kakumar@novell.com>

	* gtkhtml-stream.c (gtk_html_stream_vprintf): Use g_strdup_vprintf instead of 
	g_printf_string_upper_bound since the latter returns incorrect values. 

	Fixes tasks and contact list dump in evolution.
	Fix bug #270844.

2005-08-05  Kaushal Kumar  <kakumar@novell.com>

	* htmlengine-edit.c (html_engine_get_insert_level_for_object): Advance clue 
	to next level to fix infinite looping for cursor level. 

	Fixes bug #300696.

2005-08-03  Kaushal Kumar  <kakumar@novell.com>

	* htmlengine-edit-cut-and-paste.c (check_for_simple_containers): Fix the 
	handling of simple deletion of text from table cells. 

	Fixes bugs #300130, 309174.

2005-07-11  Diego Gonzalez  <diego@pemas.net>

	* htmldrawqueue.c (clear_element_destroy): replace deprecated
	  gdk_pixbuf_unref call and use g_object_unref instead.
	* htmlgdkpainter.c (draw_pixmap): ditto
	* htmlimage.c (html_image_factory_free): ditto

2005-07-07  Kjartan Maraas  <kmaraas@gnome.org>

	* htmlclueflow.c: (write_item_marker): Plug a leak 

2005-07-11  Kaushal Kumar  <kakumar@novell.com>

	* htmlpainter.c (html_painter_set_widget): Call the set_widget directly 
	instead of returning it.
	Patch from Damien Carbery. Fixes bug #309785.

2005-07-06  Mengjie Yu  <meng-jie.yu@sun.com>

	* gtkhtml.c: (gtk_html_class_init):
	* gtkhtml.h:
	Change the signal name object_deleted to object_delete.
